Update GitHub Actions workflow name for clarity and emphasis on tasks

--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -12,6 +12,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    name: Check formatting, lint, build and tests! 🚀
 
     steps:
     - name: Cache dependencies
