Update README.md to clarify JSON structure and improve formatting examples; add lcov.info to GitHub Actions cache for coverage reporting.

--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -24,6 +24,7 @@ jobs:
           ~/.cargo/registry
           ~/.cargo/git
           target
+          lcov.info
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
     - name: Check formatting
