--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -27,30 +27,30 @@ jobs:
           lcov.info
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-    - name: Check formatting
-      run: cargo fmt --all -- --check
+    # - name: Check formatting
+    #   run: cargo fmt --all -- --check
 
-    - name: Lint with clippy
-      run: cargo clippy --all-targets --all-features -- -D warnings
+    # - name: Lint with clippy
+    #   run: cargo clippy --all-targets --all-features -- -D warnings
 
     - name: Build
       run: cargo build --verbose
 
-    - name: Run tests
-      run: cargo test --verbose
+    # - name: Run tests
+    #   run: cargo test --verbose
 
-    - name: Install cargo-llvm-cov
-      uses: taiki-e/install-action@cargo-llvm-cov
+    # - name: Install cargo-llvm-cov
+    #   uses: taiki-e/install-action@cargo-llvm-cov
 
-    - name: Generate code coverage
-      run: cargo llvm-cov --ignore-filename-regex "infrastructure|main.rs" --all-features --workspace --lcov --output-path lcov.info
+    # - name: Generate code coverage
+    #   run: cargo llvm-cov --ignore-filename-regex "infrastructure|main.rs" --all-features --workspace --lcov --output-path lcov.info
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        files: lcov.info
-        fail_ci_if_error: true
+    # - name: Upload coverage to Codecov
+    #   uses: codecov/codecov-action@v3
+    #   with:
+    #     token: ${{ secrets.CODECOV_TOKEN }}
+    #     files: lcov.info
+    #     fail_ci_if_error: true
 
     - name: Upload binary to EC2
       uses: appleboy/scp-action@v0.1.4
