--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -68,5 +68,6 @@ jobs:
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
+          chmod +x /home/${{ secrets.EC2_USER }}/prex_core_challenge
           pkill prex_core_challenge || true
           nohup /home/${{ secrets.EC2_USER }}/prex_core_challenge > app.log 2>&1 &
