--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -54,6 +54,15 @@ jobs:
     - name: Prepare binary for upload
       run: mv target/debug/prex_core_challenge prex_core_challenge
 
+    - name: Stop app on EC2
+      uses: appleboy/ssh-action@v1.0.0
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USER }}
+        key: ${{ secrets.EC2_SSH_KEY }}
+        script: |
+          ps aux | grep prex_core_challenge | grep -v grep | awk '{print $2}' | xargs -r kill -9
+
     - name: Upload binary to EC2
       uses: appleboy/scp-action@v0.1.4
       with:
@@ -72,5 +81,4 @@ jobs:
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
           chmod +x /home/${{ secrets.EC2_USER }}/app/prex_core_challenge
-          pkill prex_core_challenge || true
           nohup /home/${{ secrets.EC2_USER }}/app/prex_core_challenge > /home/${{ secrets.EC2_USER }}/app/app.log 2>&1 &
