--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -61,8 +61,8 @@ jobs:
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
-          ps aux | grep prex_core_challenge | grep -v grep | awk '{print $2}' | xargs -r kill -9
-
+          pkill prex_core || true
+          
     - name: Upload binary to EC2
       uses: appleboy/scp-action@v0.1.4
       with:
