--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -54,31 +54,40 @@ jobs:
     - name: Prepare binary for upload
       run: mv target/debug/prex_core_challenge prex_core_challenge
 
-    - name: Stop app on EC2
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        key: ${{ secrets.EC2_SSH_KEY }}
-        script: |
-          pkill prex_core || true
-          
     - name: Upload binary to EC2
       uses: appleboy/scp-action@v0.1.4
       with:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_SSH_KEY }}
-        source: "prex_core_challenge"
+        debug: true
+        source: |
+          prex_core_challenge
+          prex_core_challenge.service
         target: "/home/${{ secrets.EC2_USER }}/app"
         overwrite: true
 
-    - name: Restart app on EC2
+    - name: Ensure systemd service exists
       uses: appleboy/ssh-action@v1.0.0
       with:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_SSH_KEY }}
+        debug: true
         script: |
-          chmod +x /home/${{ secrets.EC2_USER }}/app/prex_core_challenge
-          nohup /home/${{ secrets.EC2_USER }}/app/prex_core_challenge > /home/${{ secrets.EC2_USER }}/app/app.log 2>&1 &
+          if [ ! -f /etc/systemd/system/prex_core_challenge.service ]; then
+            sudo mv /home/${{ secrets.EC2_USER }}/app/prex_core_challenge.service /etc/systemd/system/prex_core_challenge.service
+            sudo systemctl daemon-reload
+            sudo systemctl enable prex_core_challenge
+            sudo systemctl start prex_core_challenge
+          fi
+
+    - name: Restart app with systemd
+      uses: appleboy/ssh-action@v1.0.0
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USER }}
+        key: ${{ secrets.EC2_SSH_KEY }}
+        debug: true
+        script: |
+          sudo systemctl restart prex_core_challenge
