chore: update binary and service file paths in GitHub Actions workflow for EC2 deployment

--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -52,7 +52,7 @@ jobs:
     #     files: lcov.info
     #     fail_ci_if_error: true
     - name: Prepare binary for upload
-      run: mv target/debug/prex_core_challenge prex_core_challenge
+      run: mv target/debug/prex_core_challenge /app/prex_core_challenge && mv prex_core_challenge.service /app/prex_core_challenge.service
 
     - name: Upload binary to EC2
       uses: appleboy/scp-action@v0.1.4
@@ -62,9 +62,8 @@ jobs:
         key: ${{ secrets.EC2_SSH_KEY }}
         debug: true
         source: |
-          prex_core_challenge
-          prex_core_challenge.service
-        target: "/home/${{ secrets.EC2_USER }}/app"
+          /app/*
+        target: "/home/${{ secrets.EC2_USER }}"
         overwrite: true
 
     - name: Ensure systemd service exists
