chore: consolidate source specification for binary and service file in GitHub Actions workflow

--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -60,9 +60,7 @@ jobs:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_SSH_KEY }}
-        source: |
-          prex_core_challenge
-          prex_core_challenge.service
+        source: "prex_core_challenge, prex_core_challenge.service"
         target: "/home/${{ secrets.EC2_USER }}/app"
         overwrite: true
 
