chore: enhance systemd service configuration by adding StartLimitIntervalSec and StartLimitBurst parameters

--- a/prex_core_challenge.service
+++ b/prex_core_challenge.service
@@ -1,6 +1,8 @@
 [Unit]
 Description=Prex Core Challenge API
 After=network.target
+StartLimitIntervalSec=180
+StartLimitBurst=16
 
 [Service]
 User=ec2-user
