chore: modify GitHub Actions workflow to stop existing systemd service before uploading new binary and service file

--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -54,17 +54,7 @@ jobs:
     - name: Prepare binary for upload
       run: mv target/debug/prex_core_challenge prex_core_challenge
 
-    - name: Upload binary to EC2
-      uses: appleboy/scp-action@v0.1.4
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        key: ${{ secrets.EC2_SSH_KEY }}
-        source: "prex_core_challenge, prex_core_challenge.service"
-        target: "/home/${{ secrets.EC2_USER }}/app"
-        overwrite: true
-
-    - name: Ensure systemd service exists
+    - name: Ensure systemd service exists or stop if running
       uses: appleboy/ssh-action@v1.0.0
       with:
         host: ${{ secrets.EC2_HOST }}
@@ -72,12 +62,25 @@ jobs:
         key: ${{ secrets.EC2_SSH_KEY }}
         debug: true
         script: |
-          if [ ! -f /etc/systemd/system/prex_core_challenge.service ]; then
+          if [ -f /etc/systemd/system/prex_core_challenge.service ]; then
+            sudo systemctl stop prex_core_challenge
+          else
             sudo mv /home/${{ secrets.EC2_USER }}/app/prex_core_challenge.service /etc/systemd/system/prex_core_challenge.service
             sudo systemctl daemon-reload
             sudo systemctl enable prex_core_challenge
-            sudo systemctl start prex_core_challenge
           fi
+
+    - name: Upload binary to EC2
+      uses: appleboy/scp-action@v0.1.4
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USER }}
+        key: ${{ secrets.EC2_SSH_KEY }}
+        source: |
+          prex_core_challenge
+          prex_core_challenge.service
+        target: "/home/${{ secrets.EC2_USER }}/app"
+        overwrite: true
 
     - name: Restart app with systemd
       uses: appleboy/ssh-action@v1.0.0
