--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,17 @@ rust_decimal = { version = "1.37.2", features = ["macros", "serde"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tracing-actix-web = "0.7"
+tracing-appender = "0.2.3"
+
+# Lazy static
+lazy_static = "1.5.0"
+
+# Actix with actors
+actix-web-actors = "4.3.0"
+actix = "0.13.5"
+
+# Zip
+zip = "4.3.0"
 
 # Mocking
 [dev-dependencies]
