--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -81,9 +81,10 @@ jobs:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_SSH_KEY }}
-        source: "api/prex_core_challenge, app/prex_core_challenge.service"
+        source: "api/prex_core_challenge, api/prex_core_challenge.service"
         target: "/home/${{ secrets.EC2_USER }}/app"
         overwrite: true
+        strip_components: 1
 
     - name: Restart app with systemd
       uses: appleboy/ssh-action@v1.0.0
